--- a/404.html
+++ b/404.html
@@ -4,9 +4,9 @@ layout: default
 ---
 
 <style type="text/css" media="screen">
-  .container {
+  .container-404 {
     margin: 10px auto;
-    max-width: 600px;
+    /* max-width: 600px; */
     text-align: center;
   }
   h1 {
@@ -17,7 +17,7 @@ layout: default
   }
 </style>
 
-<div class="container">
+<div class="container-404">
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
